PROJECT(obclient)
MESSAGE("Begin to build ${PROJECT_NAME}")
MESSAGE(STATUS "PROJECT_BINARY_DIR - ${PROJECT_BINARY_DIR}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR - ${PROJECT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(. ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/../../deps /usr/local/include /usr/include)
LINK_DIRECTORIES(/usr/local/lib ${PROJECT_BINARY_DIR}/../../lib)

FILE(GLOB_RECURSE ALL_SRC *.cpp)
FOREACH (F ${ALL_SRC})
    SET(PRJ_SRC ${PRJ_SRC} ${F})
    MESSAGE("Use ${F}")
ENDFOREACH (F)

SET(LIBRARIES common pthread dl)
# readline
FIND_LIBRARY(READLINE_LIBRARY readline REQUIRED)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../bin)
MESSAGE("Binary directory: ${EXECUTABLE_OUTPUT_PATH}")
ADD_EXECUTABLE(${PROJECT_NAME} ${ALL_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES} ${READLINE_LIBRARY})

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
